# givenergy-hass

./: .bandit.yaml  .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  configuration.yaml  hacs.json  package-lock.json  package.json  prek.toml  pyproject.toml  requirements.txt  vitest.config.js
.claude/: settings.json
.claude/agents/: ha-entity-reviewer.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: bump-givenergy-modbus.yml  lint.yml  release.yml  validate.yml
custom_components/givenergy/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  switch.py
custom_components/givenergy/translations/: en.json
custom_components/givenergy_local/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  dashboard.py  datetime.py  http.py  lovelace.py  manifest.json  number.py  repairs.py  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py
custom_components/givenergy_local/translations/: en.json
custom_components/givenergy_local/www/: ge-cell-heatmap.js  ge-strategy.js  ge-tape.js
dashboard/: generate.py  template.yaml
docs/: migration-from-givtcp.md  security-review-2026-06-10.md
docs/design/: dashboard-redesign-brief.md  dashboard-redesign-exploration.html  upstream-issue-docs-resource-semantics.md  upstream-issue-frontend-panel-race.md
docs/superpowers/plans/: 2026-06-14-givtcp-migration-stats-repair.md  2026-06-15-migrate-rebuild-rebaseline.md
docs/superpowers/specs/: 2026-06-12-dashboard-mission-design.md  2026-06-14-givtcp-migration-stats-repair-design.md  2026-06-15-migrate-rebuild-rebaseline-design.md
lovelace/: dashboard.yaml  generate.py
scripts/: apply-branch-protection.sh  migrate_from_givtcp.py  setup.sh
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_capture.py  test_config_flow.py  test_control_entity_device_info.py  test_coordinator.py  test_dashboard.py  test_datetime.py  test_ems.py  test_init.py  test_migrate_script_io.py  test_migrate_stats_repair.py  test_money_sensors.py  test_number.py  test_script_entity_refs.py  test_select.py  test_sensor.py  test_strategy_manifest.py  test_switch.py  test_system_time_drift.py  test_time.py
tests/js/: ge-flow-render.test.js  ge-strategy.test.js  ge-tape.test.js  mock-hass.js
