[project]
name = "givenergy-local"
description = "Home Assistant custom component for GivEnergy inverters via local Modbus TCP"
requires-python = ">=3.13"
dependencies = [
    "givenergy-modbus>=1.3.0",
]
# Version is not declared here. The integration is distributed via HACS,
# which reads `custom_components/givenergy_local/manifest.json` as the
# single source of truth. `[tool.uv] package = false` means uv never
# builds this project, so a pyproject version would just drift.
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
files = ["custom_components"]
# HA core and givenergy-modbus's dynamically-built pydantic models surface
# as `Any` here — until the latter ships static stubs for Inverter/Battery,
# disable just the strictness sub-flags that fire purely on that fallout.
disallow_subclassing_any = false
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
