[project]
name = "givenergy-local"
# Stub version only. The integration is distributed via HACS, which reads
# `custom_components/givenergy_local/manifest.json` as the single source of
# truth. uv_build requires a static version field even with
# [tool.uv] package = false, so we satisfy it with a placeholder rather than
# duplicate the real version here and let it drift.
version = "0.0.0"
description = "Home Assistant custom component for GivEnergy inverters via local Modbus TCP"
requires-python = ">=3.14.2"
dependencies = [
    "givenergy-modbus>=2.3.3,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.9",
    "mypy>=1.10",
]

# This project isn't distributed as a pip package — it's a HACS-installed HA
# custom component. The pyproject is here purely so `uv` can resolve a dev
# venv. Pin the build backend explicitly to uv_build so we don't fall back
# to setuptools' flat-layout auto-discovery, which fails on the coexisting
# `custom_components/` and `dashboard/` directories.
[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
files = ["custom_components"]
# HA core and givenergy-modbus's dynamically-built pydantic models surface
# as `Any` here — until the latter ships static stubs for Inverter/Battery,
# disable just the strictness sub-flags that fire purely on that fallout.
disallow_subclassing_any = false
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
